Bug fixes
- Fixed button top spacing in about page
- Fixed text overlapping in button
- Fixed marquee text direction
- Fixed accordion icon issue

--- a/css/style.css
+++ b/css/style.css
@@ -19232,3 +19232,7 @@ footer .footer-navbar .nav-item:last-child a {
 .footer-demo img {
   max-height: 55px !important;
 }
+/*gap*/
+.gap-5px {
+  gap: 5px;
+}
